--- a/trine.html
+++ b/trine.html
@@ -43,6 +43,9 @@
 							<td>
 								<a href="#" class="butt">Arts</a>
 							</td>
+							<td>
+								<a href="#" class="butt">History</a>
+							</td>
 						</tr>
 					</table>
 				</div>
@@ -111,7 +114,29 @@
 			</div>
 	</div>
 	<div class="footer">
-		<div id="inner-footer">Футтер</div>
+		<div id="inner-footer">
+			<hr/>
+			<div class="pages">
+				<h3 class="footer-news">News</h3>
+				<a href="#top" class="footer-pages"> home page </a><br/>
+				<a href="#top" class="footer-pages"> world </a><br/>
+				<a href="#top" class="footer-pages"> politics </a><br/>
+				<a href="#top" class="footer-pages"> business</a><br/>
+				<a href="#top" class="footer-pages"> opinion</a><br/>
+				<a href="#top" class="footer-pages"> technology</a><br/>
+				<a href="#top" class="footer-pages"> science</a><br/>
+				<a href="#top" class="footer-pages"> sports </a><br/>
+				<a href="#top" class="footer-pages"> music </a><br/>
+				<a href="#top" class="footer-pages"> video </a><br/>
+				<a href="#top" class="footer-pages"> arts </a><br/>
+				<a href="#top" class="footer-pages"> history </a><br/>
+			</div>
+			<div class="contact">
+				<h3 class="footer-news">Contact us</h3>
+				<a href="#" class="footer-pages"><img src="images/vk.png" style="width: 25px"> vk</a><br/>
+				<a href="#" class="footer-pages"><img src="images/email.png" style="width: 25px"> mail</a>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
