--- a/trine.html
+++ b/trine.html
@@ -13,46 +13,21 @@
 				
 		<div class="header">
 			<h1 class="main-name">Moscow today</h1>
-				<div id="inner-header">
-					<table class="head-butt">
-						<tr class="head-table">
-							<td>
-								<a href="#" class="butt">world</a>
-							</td>
-							<td>
-								<a href="#" class="butt">Politics</a>
-							</td>
-							<td>
-								<a href="#" class="butt">Business</a>
-							</td>
-							<td>
-								<a href="#" class="butt">Opinion</a>
-							</td>
-							<td>
-								<a href="#" class="butt">Tech</a>
-							</td>
-							<td>
-								<a href="#" class="butt">Science</a>
-							</td>
-							<td>
-								<a href="#" class="butt">Sports</a>
-							</td>
-							<td>
-								<a href="#" class="butt">Music</a>
-							</td>
-							<td>
-								<a href="#" class="butt">Video</a>
-							</td>
-							<td>
-								<a href="#" class="butt">Arts</a>
-							</td>
-							<td>
-								<a href="#" class="butt">History</a>
-							</td>
-						</tr>
-					</table>
+			<div id="inner-header">
+				<div class="btn-group d-flex" role="group">
+					<a href="#" class="butt">World</a>
+					<a href="#" class="butt">Politics</a>
+					<a href="#" class="butt">Business</a>
+					<a href="#" class="butt">Opinion</a>
+					<a href="#" class="butt">Tech</a>
+					<a href="#" class="butt">Science</a>
+					<a href="#" class="butt">Sports</a>
+					<a href="#" class="butt">Music</a>
+					<a href="#" class="butt">Video</a>
+					<a href="#" class="butt">Arts</a>
+					<a href="#" class="butt">History</a>
 				</div>
-				
+			</div>
 		</div>
 	</div>
 	<div class="group">
