--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body class="bg-light">
+	<br>
 	<header>
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-4"></div>
-				<div class="col-sm-5 text-center title_name">
-					<h1>Moscow times</h1>
+				<div class="col-sm-3"></div>
+				<div class="col-sm-6 text-center">
+					<h1 class="main-name">From Russia with love</h1>
 				</div>
-				<div class="col-sm-3 author">
-					<h4>Worded by <a href="#">Christine</a></h4>
-					<p>From Russia with love</p>
+				<div class="col-sm-3 ">
+					<br>
+					<h6 class="author">Worded by <a href="#">Christine</a></h6>
 				</div>
 			</div>
 		</div>
 	</header>
 
 	<nav>
-		<hr/>
 		<div class="container">
 			<div class="row">
 				<ul class="list-inline">
@@ -67,8 +67,39 @@
 				</ul>
 			</div>
 		</div>
-		<hr/>
 	</nav>
+
+	<section id="body">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-9" id="content">
+					<img src="images/jellyfish.jpg" alt="Медуза" 
+						class="img-fluid rounded" width="49%">
+					<img src="images/jellyfish.jpg" alt="Медуза" 
+						class="img-fluid rounded" width="49%">
+				</div>
+				<div class="col-md-3" id="sidebar">
+					<table class="table text-center">
+						<thead class="thead-dark">
+							<tr>
+								<th scope="col">new colomn</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr><td>das</td></tr>
+							<tr><td>das</td></tr>
+							<tr><td>das</td></tr>
+							<tr><td>das</td></tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			
+		</div>
+	</section>
+
 
 </body>
 </html>
